# Progetto-Programmazione-Avanzata

./: CMakeLists.txt
UML/: UML 1.0 codice.txt  UML.puml
include/: CalcolatorePreventivo.h  CatalogoCicli.h  GestioneInputUI.h  GradoDifficolta.h  IdPreventivoGenerator.h  ListinoDefault.h  ListinoPrezzi.h  Preventivo.h  RegolaCartongesso.h  RegolaCosto.h  RegolaTinteggiatura.h  SalvataggioPreventivo.h  Utils.h  VoceCartongesso.h  VoceCartongessoBuilder.h  VoceCosto.h  VoceTinteggiatura.h
presentazione progetto/: Codice LateX.txt
src/: CalcolatorePreventivo.cpp  CatalogoCicli.cpp  GestioneInputUI.cpp  IdPreventivoGenerator.cpp  ListinoDefault.cpp  ListinoPrezzi.cpp  Preventivo.cpp  RegolaCartongesso.cpp  RegolaTinteggiatura.cpp  SalvataggioPreventivo.cpp  Utils.cpp  VoceCartongesso.cpp  VoceCartongessoBuilder.cpp  VoceTinteggiatura.cpp  main.cpp
